OldArchive/b628d5e7dbc608b9d3c638d6dbe46907-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In member function ‘String& String::operator[](int)’:
main.cpp:11:13: error: invalid type argument of unary ‘*’ (have ‘char’)
 arr = *arr[n];
             ^
main.cpp:12:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
